--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "redux": "^5.0.1",
-    "redux-toolkit": "^1.1.2"
+    "react-icons": "^5.1.0",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
